crates/tmc-langs-cli/tests/snapshots/integration__compress_project_tar@java__maven-exercise-2.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: files
input_file: sample_exercises/java/maven-exercise
---
- maven-exercise
- maven-exercise/src
- maven-exercise/src/main
- maven-exercise/src/main/java
- maven-exercise/src/main/java/fi
- maven-exercise/src/main/java/fi/helsinki
- maven-exercise/src/main/java/fi/helsinki/cs
- maven-exercise/src/main/java/fi/helsinki/cs/maventest
- maven-exercise/src/main/java/fi/helsinki/cs/maventest/App.java

