crates/tmc-langs-cli/tests/snapshots/integration__compress_project_tar@java__maven-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: sample_exercises/java/maven-exercise
---
output-kind: output-data
status: finished
message: compressed project from [PATH] to [PATH]
result: executed-command
data:
  output-data-kind: compressed-project-hash
  output-data: [HASH]
